force-app/main/default/objects/Course_Subject__c/Course_Subject__c.object-meta.xml
<CustomObject>
    <label>Course Subject</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Course Subject Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CourseSubjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>