force-app/main/default/objects/Course_Subject__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>CourseSubjects</relationshipLabel>
    <relationshipName>CourseSubjects</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>